--- a/Rock-paper-scissors-lizard-Spock .ipynb
+++ b/Rock-paper-scissors-lizard-Spock .ipynb
@@ -185,13 +185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "all_choice = [\"rock\", \"paper\", \"scissors\", \"lizard\", \"spock\"]\n",
     "def start_game():\n",
-    "    player_choice = input(\"Choose Your Type (rock, paper, scissors, lizard, spock):\").strip().lower()\n",
+    "    player_choice = input(\"Choose Your Type (rock, paper, scissors, lizard, spock): \").strip().lower()\n",
     "    if player_choice in all_choice:\n",
     "        rpsls(player_choice)\n",
     "        if mod_dif == 0:\n",
@@ -217,17 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose Your Type (rock, paper, scissors, lizard, spock):spock\n",
+      "Choose Your Type (rock, paper, scissors, lizard, spock): spock\n",
       "                         \n",
       "Player's choice spock\n",
-      "Computer's choice scissors\n",
+      "Computer's choice rock\n",
       "You wins!\n",
       "Game Ended, Thanks for playing.\n"
      ]
@@ -246,23 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose Your Type (rock, paper, scissors, lizard, spock):rock\n",
+      "Choose Your Type (rock, paper, scissors, lizard, spock): rock\n",
       "                         \n",
       "Player's choice rock\n",
       "Computer's choice rock\n",
       "It's a tie!\n",
       "Lets try again!\n",
-      "Choose Your Type (rock, paper, scissors, lizard, Spock):lizard\n",
+      "Choose Your Type (rock, paper, scissors, lizard, spock): lizard\n",
       "                         \n",
       "Player's choice lizard\n",
-      "Computer's choice paper\n",
+      "Computer's choice spock\n",
       "You wins!\n",
       "Game Ended, Thanks for playing.\n"
      ]
@@ -281,18 +281,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose Your Type (rock, paper, scissors, lizard, spock):error\n",
+      "Choose Your Type (rock, paper, scissors, lizard, spock): error\n",
       "Error - input invalid type. Please try again.\n",
-      "Choose Your Type (rock, paper, scissors, lizard, spock):another error\n",
+      "Choose Your Type (rock, paper, scissors, lizard, spock): another error\n",
       "Error - input invalid type. Please try again.\n",
-      "Choose Your Type (rock, paper, scissors, lizard, spock):scissors\n",
+      "Choose Your Type (rock, paper, scissors, lizard, spock): scissors\n",
       "                         \n",
       "Player's choice scissors\n",
       "Computer's choice lizard\n",
@@ -304,6 +304,13 @@
    "source": [
     "start_game()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
