--- a/Rock-paper-scissors-lizard-Spock .ipynb
+++ b/Rock-paper-scissors-lizard-Spock .ipynb
@@ -11,11 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rock-paper-scissors-lizard-Spock is a game that was first introduce in the TV-series \"Big Bang Theory\" by Sheldon. This game is built upon the classic Rock-Paper-scissors as we all known. The rules of Rock-paper-scissors-lizard-Spock can be illustrate easily with picture below."
+    "Rock-paper-scissors-lizard-Spock is a game that was first introduced in the TV-series \"Big Bang Theory\" by Sheldon. This game is built upon the classic Rock-Paper-scissors as we all known. The rules of Rock-paper-scissors-lizard-Spock can be illustrate easily with picture below."
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -44,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we take the the difference between each other (first player - second player) by the mod of 5, when the results is 0, its a tie. When the results is either 1 or 2 the first player won and when the results is either 3 or 4 the second player won. \n",
+    "Then we take the the difference between each player (first player - second player) by the mod of 5. When the results is 0, its a tie. When the results is either 1 or 2 the first player won and when the results is either 3 or 4 the second player won. \n",
     "\n",
     "Lets start putting this in code."
    ]
@@ -185,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +226,8 @@
       "Choose Your Type (rock, paper, scissors, lizard, spock): spock\n",
       "                         \n",
       "Player's choice spock\n",
-      "Computer's choice rock\n",
-      "You wins!\n",
+      "Computer's choice paper\n",
+      "Computer wins!\n",
       "Game Ended, Thanks for playing.\n"
      ]
     }
@@ -241,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trying the \"Tie\" resart functionality"
+    "Trying the \"Tie\" restart functionality"
    ]
   },
   {
